[package]
authors = ["Rafael Lúcio <rafaellucio@pm.me>"]
description = "A Indexed Priority Queue library based on William Fiset's algorithm"
categories = ["data-structures", "development-tools"]
edition = "2021"
keywords = ["binary", "heap", "priority", "queue"]
license = "MIT"
name = "indexed_priority_queue"
readme = "README.md"
repository = "https://github.com/Azgrom/Indexed-Priority-Queue"
rust-version = "1.61"
version = "0.1.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "indexed_priority_queue_benchmark"
harness = false
path = "./benches/indexed_priority_queue_benchmark.rs"
